--- a/pom.xml
+++ b/pom.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.seasidechachacha</groupId>
+    <groupId>com.seasidechachacha</groupId>
 
-  <artifactId>covid-management-system</artifactId>
+    <artifactId>covid-management-system</artifactId>
 
-  <version>1.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
 
-  <packaging>pom</packaging>
+    <packaging>pom</packaging>
 
-  <properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+  
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.14.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.14.1</version>
+        </dependency>
+    </dependencies>
 
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-  </properties>
-
-  <modules>
-
-    <module>client</module>
-    <module>database</module>
-    <module>payment</module>
-  </modules>
+    <modules>
+        <module>client</module>
+        <module>database</module>
+        <module>payment</module>
+    </modules>
 </project>
