--- a/client/pom.xml
+++ b/client/pom.xml
@@ -55,8 +55,13 @@
             <type>jar</type>
         </dependency>
     </dependencies>
-    
+
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
