--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>covid-management-system</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>database</artifactId>
+    <artifactId>common</artifactId>
     <packaging>jar</packaging>
     <build>
         <plugins>
@@ -29,4 +29,5 @@
             <version>8.0.27</version>
         </dependency>
     </dependencies>
+    <name>common</name>
 </project>
