--- a/database/src/main/resources/.dbconfig.properties.example
+++ b/database/src/main/resources/.dbconfig.properties.example
@@ -1,4 +1,3 @@
-# Rename this to ".dbconfig.properties"
-DATABASE_URL=jdbc:mysql://localhost:3306/
+DATABASE_URL=jdbc:mysql://localhost:3306/covid_management
 DATABASE_USERNAME=root
-DATABASE_PASSWORD=rootPassword
+DATABASE_PASSWORD=leesuby.tl123
