add ConnectionPool (payment), add script to generate paymentDB, modify dbconfig.properties.example, update deletePackage(ManagerDao), add script to change covid_managementDB (add OnDeleteCascade)
- Add ConnectionPool (payment)
- Add script to generate paymentDB
- Modify dbconfig.properties.example
- Update deletePackage(ManagerDao)
- Add script to change covid_managementDB (add OnDeleteCascade)

--- a/common/src/main/resources/.dbconfig.properties.example
+++ b/common/src/main/resources/.dbconfig.properties.example
@@ -1,3 +1,4 @@
 DATABASE_URL=jdbc:mysql://localhost:3306/covid_management
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=leesuby.tl123
+DATABASE_MAX_CONNECTION=20
